--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
                 <img class="w3-round-large" src="code.png" alt="NYE" style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>NYE Informatikai Kar</h1>
-                <h2>IT karrierutak</h2>
-                <h3>2025.03.24. 16 óra</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://www.nye.hu">Részletek</a>
+                <h1>ELTE</h1>
+                <h2>Eötvös Loránd Tudományegyetem</h2>
+                <h3>Az ELTE informatika szakán a hallgatók megtanulják a programozás, az algoritmusok és az adatkezelés alapjait. Modern laborok és tapasztalt oktatók segítik a gyakorlati tudás megszerzését.</h3>
+                <a class="w3-btn w3-indigo w3-round-large" href="https://www.elte.hu/">Részletek</a>
             </div>
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
                 <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="DE" style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>Debreceni Egyetem</h1>
-                <h2>Informatikai Kar bemutató</h2>
-                <h3>2025.03.25. 15 óra</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://inf.unideb.hu">Részletek</a>
+                <h1>BME</h1>
+                <h2>Budapesti Műszaki és Gazdaságtudományi Egyetem</h2>
+                <h3>A BME informatika képzése erős matematikai alapokra épül, és kiemelten foglalkozik a szoftverfejlesztéssel, mesterséges intelligenciával és hálózatokkal. A végzettek keresettek a munkaerőpiacon.</h3>
+                <a class="w3-btn w3-indigo w3-round-large" href="https://www.bme.hu/">Részletek</a>
             </div>
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-border w3-hover-shadow">
                 <img class="w3-round-large" src="typing.png" alt="Gépész" style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>Gépészeti Technikum</h1>
-                <h2>IT alapok</h2>
-                <h3>2025.03.28. 10 óra</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://msz.gepeszeti.hu">Részletek</a>
+                <h1>SZTE</h1>
+                <h2>Szegedi Tudományegyetem</h2>
+                <h3>Az SZTE informatika szakán a diákok a szoftverfejlesztés, adatbázis-kezelés és IT-biztonság terén szerezhetnek alapos tudást. Családias légkör és kutatási lehetőségek várják a hallgatókat.</h3>
+                <a class="w3-btn w3-indigo w3-round-large" href="https://u-szeged.hu/">Részletek</a>
             </div>
 
         </div>
