--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
             <span class="w3-large">Balogh Bianka Jázmin 10.b</span>
         </h1>
     </header>
-    
+
 
     <section class="w3-container">
         <div class="grid-programs w3-padding-large">
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
                 <img class="w3-round-large" src="code.png" alt="NYE" style="width:100%; aspect-ratio: 16 / 10;">
+                <h1>ELTE</h1>
                 <h1>ELTE 💻✨</h1>
                 <h2>Eötvös Loránd Tudományegyetem</h2>
                 <h3>Az ELTE informatika szakán a hallgatók megtanulják a programozás, az algoritmusok és az adatkezelés alapjait. Modern laborok és tapasztalt oktatók segítik a gyakorlati tudás megszerzését.</h3>
@@ -63,6 +64,7 @@
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
                 <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="DE" style="width:100%; aspect-ratio: 16 / 10;">
+                <h1>BME</h1>
                 <h1>BME 💻✨</h1>
                 <h2>Budapesti Műszaki és Gazdaságtudományi Egyetem</h2>
                 <h3>A BME informatika képzése erős matematikai alapokra épül, és kiemelten foglalkozik a szoftverfejlesztéssel, mesterséges intelligenciával és hálózatokkal. A végzettek keresettek a munkaerőpiacon.</h3>
@@ -71,12 +73,38 @@
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-border w3-hover-shadow">
                 <img class="w3-round-large" src="typing.png" alt="Gépész" style="width:100%; aspect-ratio: 16 / 10;">
+                <h1>SZTE</h1>
                 <h1>SZTE 💻✨</h1>
                 <h2>Szegedi Tudományegyetem</h2>
                 <h3>Az SZTE informatika szakán a diákok a szoftverfejlesztés, adatbázis-kezelés és IT-biztonság terén szerezhetnek alapos tudást. Családias légkör és kutatási lehetőségek várják a hallgatókat.</h3>
                 <a class="w3-btn w3-indigo w3-round-large" href="https://u-szeged.hu/">Részletek</a>
             </div>
 
+        </div>
+        <div class="w3-half w3-panel">
+            <div class="w3-amber w3-panel w3-round-large">
+                <h1>Ajánlott program</h1>
+                <p class="w3-justify">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, reprehenderit quidem laboriosam magnam
+                    itaque quo quibusdam adipisci dolor hic non atque quas dolorum temporibus neque, qui repellendus
+                    dolorem
+                    quos earum?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et provident, dolores rem incidunt
+                    praesentium
+                    laborum, magni ut autem corrupti quaerat quasi laudantium voluptas nulla, rerum delectus voluptatum
+                    nihil unde placeat.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, asperiores minima nemo sint porro
+                    praesentium dolores quos, ab maxime molestias reiciendis dignissimos distinctio dolorem eaque
+                    nesciunt
+                    esse maiores iusto accusantium!
+                </p>
+            </div>
+            <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
+        </div>
+        <div class="w3-half w3-panel">
+            <div class="w3-panel">
+                <img src="ajanlott.jpg" style="width: 100%;" alt="program" class="w3-round-large">
+            </div>
         </div>
     </section>
 
