--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
     </header>
 
 
+    <section>
+        <section class="w3-container">
+            <div class="w3-row-padding">
+                <div class="w3-half w3-panel">
+                    <div class="w3-panel">
+                        <img src="dth.png" style="width: 100%;" alt="program" class="w3-round-large">
+                    </div>
+                </div>
+                <div class="w3-half w3-panel">
+                    <div class="w3-amber w3-panel w3-round-large">
+                        <h1>Digitális Témahét</h1>
+                        <p class="w3-justify">
+                            A digitális témahét célja, hogy a diákok digitális tudását élményalapú projekteken keresztül
+                            fejlessze. A résztvevők modern technológiákkal dolgoznak, miközben együttműködnek és új
+                            készségeket sajátítanak el. A program minden korosztály számára izgalmas lehetőségeket
+                            kínál.
+                        </p>
+                        <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+
+
     <section class="w3-container">
         <div class="grid-programs w3-padding-large">
 
@@ -58,16 +84,20 @@
                 <h1>ELTE</h1>
                 <h1>ELTE 💻✨</h1>
                 <h2>Eötvös Loránd Tudományegyetem</h2>
-                <h3>Az ELTE informatika szakán a hallgatók megtanulják a programozás, az algoritmusok és az adatkezelés alapjait. Modern laborok és tapasztalt oktatók segítik a gyakorlati tudás megszerzését.</h3>
+                <h3>Az ELTE informatika szakán a hallgatók megtanulják a programozás, az algoritmusok és az adatkezelés
+                    alapjait. Modern laborok és tapasztalt oktatók segítik a gyakorlati tudás megszerzését.</h3>
                 <a class="w3-btn w3-indigo w3-round-large" href="https://www.elte.hu/">Részletek</a>
             </div>
 
             <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
-                <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="DE" style="width:100%; aspect-ratio: 16 / 10;">
+                <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="DE"
+                    style="width:100%; aspect-ratio: 16 / 10;">
                 <h1>BME</h1>
                 <h1>BME 💻✨</h1>
                 <h2>Budapesti Műszaki és Gazdaságtudományi Egyetem</h2>
-                <h3>A BME informatika képzése erős matematikai alapokra épül, és kiemelten foglalkozik a szoftverfejlesztéssel, mesterséges intelligenciával és hálózatokkal. A végzettek keresettek a munkaerőpiacon.</h3>
+                <h3>A BME informatika képzése erős matematikai alapokra épül, és kiemelten foglalkozik a
+                    szoftverfejlesztéssel, mesterséges intelligenciával és hálózatokkal. A végzettek keresettek a
+                    munkaerőpiacon.</h3>
                 <a class="w3-btn w3-indigo w3-round-large" href="https://www.bme.hu/">Részletek</a>
             </div>
 
@@ -76,9 +106,12 @@
                 <h1>SZTE</h1>
                 <h1>SZTE 💻✨</h1>
                 <h2>Szegedi Tudományegyetem</h2>
-                <h3>Az SZTE informatika szakán a diákok a szoftverfejlesztés, adatbázis-kezelés és IT-biztonság terén szerezhetnek alapos tudást. Családias légkör és kutatási lehetőségek várják a hallgatókat.</h3>
+                <h3>Az SZTE informatika szakán a diákok a szoftverfejlesztés, adatbázis-kezelés és IT-biztonság terén
+                    szerezhetnek alapos tudást. Családias légkör és kutatási lehetőségek várják a hallgatókat.</h3>
                 <a class="w3-btn w3-indigo w3-round-large" href="https://u-szeged.hu/">Részletek</a>
             </div>
+
+
 
         </div>
         <div class="w3-half w3-panel">
