--- a/index.html
+++ b/index.html
@@ -2,148 +2,200 @@
 <html lang="hu">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DTH_BBJ</title>
-    <link rel="shortcut icon" href="kepek/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <style>
-        body {
-            background-color: #f5f3ff;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DTH_BBJ</title>
+  <link rel="shortcut icon" href="kepek/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <style>
+    body {
+      background-color: #f5f3ff;
+    }
 
-        .egerszin {
-            background-color: #e0d7f7;
-        }
+    .egerszin {
+      background-color: #e0d7f7;
+    }
 
-        header {
-            background-image: linear-gradient(to right, #6a1b9a, #ba68c8, #6a1b9a) !important;
-        }
+    header {
+      background-image: linear-gradient(to right, #6a1b9a, #ba68c8, #6a1b9a) !important;
+    }
 
-        .w3-indigo {
-            background-color: #8e24aa !important;
-            color: white !important;
-        }
+    .w3-indigo {
+      background-color: #8e24aa !important;
+      color: white !important;
+    }
 
-        .w3-amber {
-            background-color: #ce93d8 !important;
-            color: black !important;
-        }
+    .w3-amber {
+      background-color: #ce93d8 !important;
+      color: black !important;
+    }
 
-        .grid-programs {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-        }
-    </style>
+    .grid-programs {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 15px;
+    }
+
+    .centered-form {
+      margin: auto;
+      width: 50%;
+    }
+  </style>
 </head>
 
 <body>
-    <header class="w3-container w3-center">
-        <h1 class="w3-padding">
-            <span class="w3-tag w3-jumbo w3-amber w3-round-large">D</span>igitális
-            <span class="w3-tag w3-jumbo w3-indigo w3-round-large">T</span>éma
-            <span class="w3-tag w3-jumbo w3-amber w3-round-large">H</span>ét <br>
-            <span class="w3-xlarge">2025. március 24-28.</span><br>
-            <span class="w3-large">Balogh Bianka Jázmin 10.b</span>
-        </h1>
-    </header>
+  <header class="w3-container w3-center">
+    <h1 class="w3-padding">
+      <span class="w3-tag w3-jumbo w3-amber w3-round-large">D</span>igitális
+      <span class="w3-tag w3-jumbo w3-indigo w3-round-large">T</span>éma
+      <span class="w3-tag w3-jumbo w3-amber w3-round-large">H</span>ét <br>
+      <span class="w3-xlarge">2025. március 24-28.</span><br>
+      <span class="w3-large">Balogh Bianka Jázmin 10.b</span>
+    </h1>
+  </header>
 
-
-    <section>
-        <section class="w3-container">
-            <div class="w3-row-padding">
-                <div class="w3-half w3-panel">
-                    <div class="w3-panel">
-                        <img src="dth.png" style="width: 100%;" alt="program" class="w3-round-large">
-                    </div>
-                </div>
-                <div class="w3-half w3-panel">
-                    <div class="w3-amber w3-panel w3-round-large">
-                        <h1>Digitális Témahét</h1>
-                        <p class="w3-justify">
-                            A digitális témahét célja, hogy a diákok digitális tudását élményalapú projekteken keresztül
-                            fejlessze. A résztvevők modern technológiákkal dolgoznak, miközben együttműködnek és új
-                            készségeket sajátítanak el. A program minden korosztály számára izgalmas lehetőségeket
-                            kínál.
-                        </p>
-                        <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </section>
-
-
-
-    <section class="w3-container">
-        <div class="grid-programs w3-padding-large">
-
-            <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
-                <img class="w3-round-large" src="code.png" alt="NYE" style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>ELTE</h1>
-                <h1>ELTE 💻✨</h1>
-                <h2>Eötvös Loránd Tudományegyetem</h2>
-                <h3>Az ELTE informatika szakán a hallgatók megtanulják a programozás, az algoritmusok és az adatkezelés
-                    alapjait. Modern laborok és tapasztalt oktatók segítik a gyakorlati tudás megszerzését.</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://www.elte.hu/">Részletek</a>
-            </div>
-
-            <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
-                <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="DE"
-                    style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>BME</h1>
-                <h1>BME 💻✨</h1>
-                <h2>Budapesti Műszaki és Gazdaságtudományi Egyetem</h2>
-                <h3>A BME informatika képzése erős matematikai alapokra épül, és kiemelten foglalkozik a
-                    szoftverfejlesztéssel, mesterséges intelligenciával és hálózatokkal. A végzettek keresettek a
-                    munkaerőpiacon.</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://www.bme.hu/">Részletek</a>
-            </div>
-
-            <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-border w3-hover-shadow">
-                <img class="w3-round-large" src="typing.png" alt="Gépész" style="width:100%; aspect-ratio: 16 / 10;">
-                <h1>SZTE</h1>
-                <h1>SZTE 💻✨</h1>
-                <h2>Szegedi Tudományegyetem</h2>
-                <h3>Az SZTE informatika szakán a diákok a szoftverfejlesztés, adatbázis-kezelés és IT-biztonság terén
-                    szerezhetnek alapos tudást. Családias légkör és kutatási lehetőségek várják a hallgatókat.</h3>
-                <a class="w3-btn w3-indigo w3-round-large" href="https://u-szeged.hu/">Részletek</a>
-            </div>
-
-
-
+  <section class="w3-container">
+    <div class="w3-row-padding">
+      <div class="w3-half w3-panel">
+        <div class="w3-panel">
+          <img src="dth.png" style="width: 100%;" alt="program" class="w3-round-large">
         </div>
-        <div class="w3-half w3-panel">
-            <div class="w3-amber w3-panel w3-round-large">
-                <h1>Ajánlott program</h1>
-                <p class="w3-justify">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, reprehenderit quidem laboriosam magnam
-                    itaque quo quibusdam adipisci dolor hic non atque quas dolorum temporibus neque, qui repellendus
-                    dolorem
-                    quos earum?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et provident, dolores rem incidunt
-                    praesentium
-                    laborum, magni ut autem corrupti quaerat quasi laudantium voluptas nulla, rerum delectus voluptatum
-                    nihil unde placeat.
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, asperiores minima nemo sint porro
-                    praesentium dolores quos, ab maxime molestias reiciendis dignissimos distinctio dolorem eaque
-                    nesciunt
-                    esse maiores iusto accusantium!
-                </p>
-            </div>
-            <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
+      </div>
+      <div class="w3-half w3-panel">
+        <div class="w3-amber w3-panel w3-round-large">
+          <h1>Digitális Témahét</h1>
+          <p class="w3-justify">
+            A digitális témahét célja, hogy a diákok digitális tudását élményalapú projekteken keresztül
+            fejlessze...
+          </p>
+          <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
         </div>
-        <div class="w3-half w3-panel">
-            <div class="w3-panel">
-                <img src="ajanlott.jpg" style="width: 100%;" alt="program" class="w3-round-large">
-            </div>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <footer class="w3-container w3-center w3-indigo w3-padding">
-        <p>&copy; 2025 Balogh Bianka Jázmin| Digitális Témahét</p>
-    </footer>
+  <section class="w3-container">
+    <div class="grid-programs w3-padding-large">
+      <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
+        <img class="w3-round-large" src="code.png" alt="ELTE" style="width:100%; aspect-ratio: 16 / 10;">
+        <h1>ELTE 💻✨</h1>
+        <h2>Eötvös Loránd Tudományegyetem</h2>
+        <h3>Az ELTE informatika szakán...</h3>
+        <a class="w3-btn w3-indigo w3-round-large" href="https://www.elte.hu/">Részletek</a>
+      </div>
+
+      <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
+        <img class="w3-round-large" src="ChatGPT Image 2025. máj. 19. 21_11_30.png" alt="BME" style="width:100%; aspect-ratio: 16 / 10;">
+        <h1>BME 💻✨</h1>
+        <h2>Budapesti Műszaki Egyetem</h2>
+        <h3>A BME informatika képzése...</h3>
+        <a class="w3-btn w3-indigo w3-round-large" href="https://www.bme.hu/">Részletek</a>
+      </div>
+
+      <div class="w3-panel w3-card w3-padding-large egerszin w3-round-large w3-hover-shadow">
+        <img class="w3-round-large" src="typing.png" alt="SZTE" style="width:100%; aspect-ratio: 16 / 10;">
+        <h1>SZTE 💻✨</h1>
+        <h2>Szegedi Tudományegyetem</h2>
+        <h3>Az SZTE informatika szakán...</h3>
+        <a class="w3-btn w3-indigo w3-round-large" href="https://u-szeged.hu/">Részletek</a>
+      </div>
+    </div>
+
+    <!-- ✅ Táblázat -->
+    <div class="w3-panel w3-card w3-round-large egerszin w3-padding-large w3-margin-top">
+      <h2>Egyetemek összehasonlítása</h2>
+      <div class="w3-responsive">
+        <table class="w3-table-all w3-hoverable w3-striped">
+          <thead>
+            <tr class="w3-indigo">
+              <th>Egyetem</th>
+              <th>Előnyök</th>
+              <th>Helyszín</th>
+              <th>Weboldal</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>ELTE</td>
+              <td>Erős elméleti alapok</td>
+              <td>Budapest</td>
+              <td><a href="https://www.elte.hu/" target="_blank">elte.hu</a></td>
+            </tr>
+            <tr>
+              <td>BME</td>
+              <td>Matematikai mélység</td>
+              <td>Budapest</td>
+              <td><a href="https://www.bme.hu/" target="_blank">bme.hu</a></td>
+            </tr>
+            <tr>
+              <td>SZTE</td>
+              <td>Kutatás és családias hangulat</td>
+              <td>Szeged</td>
+              <td><a href="https://u-szeged.hu/" target="_blank">u-szeged.hu</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- ✅ Képgaléria -->
+    <div class="w3-container">
+      <h2 class="w3-indigo w3-padding">Summer 2015</h2>
+      <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img src="img_5terre.jpg" alt="5 Terre" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>5 Terre</b></p>
+          </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img src="img_monterosso.jpg" alt="Monterosso" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Monterosso</b></p>
+          </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img src="img_vernazza.jpg" alt="Vernazza" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Vernazza</b></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ✅ Input blokk -->
+    <div class="w3-container w3-padding-32">
+      <div class="w3-card w3-round-large w3-padding-24 centered-form w3-amber">
+        <h3 class="w3-center">Kapcsolatfelvétel</h3>
+        <form action="/action_page.php" target="_blank">
+          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Név" required>
+          <input class="w3-input w3-border w3-margin-bottom" type="email" placeholder="Email" required>
+          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Üzenet" required>
+          <button class="w3-button w3-indigo w3-block w3-round-large" type="submit">Küldés</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Eredeti ajánlott program -->
+    <div class="w3-half w3-panel">
+      <div class="w3-amber w3-panel w3-round-large">
+        <h1>Ajánlott program</h1>
+        <p class="w3-justify">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+        </p>
+      </div>
+      <a class="w3-btn w3-indigo w3-round-large" href="https://digisulim.hu/">Részletek</a>
+    </div>
+    <div class="w3-half w3-panel">
+      <div class="w3-panel">
+        <img src="ajanlott.jpg" style="width: 100%;" alt="program" class="w3-round-large">
+      </div>
+    </div>
+  </section>
+
+  <footer class="w3-container w3-center w3-indigo w3-padding">
+    <p>&copy; 2025 Balogh Bianka Jázmin | Digitális Témahét</p>
+  </footer>
 </body>
 
 </html>
